--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,WONK@9..144,1&family=Montserrat&display=swap');
-@media only screen and (min-width: 481x) {
+@media only screen and (min-width: 480x) {
     .mobile-only {
         display:none !important;
     }
@@ -19,17 +19,18 @@
     --color-Cream: hsl(30, 38%, 92%);
     --color-White: hsl(0, 0%, 100%);
 
-    --space-500: 2.86em;
-    --space-400: 2.29em;
-    --space-300: 1.71em;
-    --space-200: 1.14em;
-    --space-100: 0.571em;
-    --space-50: 0.286em;
+    --space-500: 2.86rem;
+    --space-400: 2.29rem;
+    --space-300: 1.71rem;
+    --space-200: 1.14rem;
+    --space-100: 0.571rem;
+    --space-50: 0.286rem;
+    font-size: 14px;
 }
 
 .text_presset1{
     font-family: "Fraunces", sans-serif;
-    font-size: 2.29em;
+    font-size: 2.29rem;
     line-height: 100%;
     letter-spacing: 0;
     font-weight: bold;
@@ -39,7 +40,7 @@
 
 .text_presset2{
     font-family: "Montserrat", sans-serif;
-    font-size: 1em;
+    font-size: 1rem;
     line-height: 110%;
     letter-spacing: 0;
     font-weight: bold;
@@ -49,7 +50,7 @@
 
 .text_presset3{
     font-family: "Montserrat", sans-serif;
-    font-size: 1em;
+    font-size: 1rem;
     line-height: 160%;
     letter-spacing: 0;
     font-weight: 400;
@@ -59,9 +60,9 @@
 
 .text_presset4{
     font-family: "Montserrat", sans-serif;
-    font-size: .857em;
+    font-size: .857rem;
     line-height: 120%;
-    letter-spacing: .357em;
+    letter-spacing: .357rem;
     font-weight: 400;
     color: var(--color-Black);
     text-decoration: none;
@@ -69,12 +70,16 @@
 
 .text_presset5{
     font-family: "Montserrat", sans-serif;
-    font-size: .929em;
+    font-size: .929rem;
     line-height: 120%;
     letter-spacing: 0;
     font-weight: 400;
     color: var(--color-Black);
     text-decoration:line-through;
+}
+
+h1,h2{
+    margin: 0;
 }
 
 body{
@@ -92,9 +97,16 @@ main{
 
 .card{
     background-color: var(--color-White);
-    border-radius: 0.571em;
+    border-radius: 0.571rem;
     width:  fit-content;
     height: fit-content;
+}
+
+.product {
+    padding: var(--space-400);
+    section + section{
+        margin-top: var(--space-400);
+    }
 }
 
 @media screen and (max-width: 480px) {
@@ -102,29 +114,41 @@ main{
         padding: 1vh .5vw;
     }
     .card {
-        width: 25em;
+        width: 25rem;
         height: fit-content;
         margin: 0;
     }
-}
-
-
-.product-image{
-    img.mobile-only{
-        width: 25em;
-        height: 24.4em;
-        border-radius: 0.571em 0.571em 0 0;
-    }
-    img.desktop-only{
-        width: 21.4em;
-        height: auto;
-        border-radius: 0.571em 0 0 0.571em;
-    }
-}
-
-.product {
+    .product {
     padding: var(--space-400);
     section + section{
         margin-top: var(--space-300);
     }
 }
+}
+
+
+.product-image{
+    img.mobile-only{
+        width: 25rem;
+        height: 24.4rem;
+        border-radius: 0.571rem 0.571rem 0 0;
+    }
+    img.desktop-only{
+        width: 21.4rem;
+        height: auto;
+        border-radius: 0.571rem 0 0 0.571rem;
+    }
+}
+
+.product-info{
+    h1{
+        margin-top: var(--space-300);
+    }
+    p{
+        margin-top: var(--space-300);
+    }
+    *:first-child{
+        margin-top: 0;
+    }
+}
+
